Better heuristic value function