@@ -1,25 +1,30 @@
 package board;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+
+
+//-XX:+UseConcMarkSweepGC -XX:+UseParNewGC
+
 
 public class BoardInterface 
 {
 	// User input fields
-	private byte boardSize1;
-	private byte boardSize2;
-	private byte inARowToWin;
-	private byte whoGoesFirst; // 1 if player goes first, otherwise 2
+	private int boardSize1;
+	private int boardSize2;
+	private int inARowToWin;
+	private int whoGoesFirst; // 1 if player goes first, otherwise 2
 
 	// Consequential fields
-	private byte[][] board;
+	private int[][] board;
 	private int turn;
 	
 	
 	// Derived fields 
-	private byte value; // How good the given position is
+	private int value; // How good the given position is
 	private ArrayList<BoardInterface> children; // Board interfaces one move ahead of the current board interface
-	private byte winner; // 1 if first player wins, 2 if second player wins, 0 otherwise;
-	private ArrayList<byte[]> possibleMoves; // List of all possible moves 
+	private int winner; // 1 if first player wins, 2 if second player wins, 0 otherwise;
+	private ArrayList<int[]> possibleMoves; // List of all possible moves 
 	private boolean isLeaf; // Determines if the game is in a playable state.
 	private String evaluationType;
 	
@@ -30,13 +35,13 @@ public class BoardInterface
 		 * @param boardSize1
 		 * @param boardSize2
 		 */
-		public BoardInterface(byte boardSize1, byte boardSize2, byte inARowToWin, byte whoGoesFirst)
+		public BoardInterface(int boardSize1, int boardSize2, int inARowToWin, int whoGoesFirst)
 		{
 			// User input fields
 			this.boardSize1 = boardSize1;
 			this.boardSize2 = boardSize2;
 			this.inARowToWin = inARowToWin;
-			this.whoGoesFirst = (byte) (whoGoesFirst - 1);
+			this.whoGoesFirst =  (whoGoesFirst - 1);
 			
 			// Consequential fields
 			this.board = generateNewBoard();
@@ -46,21 +51,21 @@ public class BoardInterface
 			this.value = 0;
 			this.children = new ArrayList<BoardInterface>();
 			this.winner = 0;
-			this.possibleMoves = new ArrayList<byte[]>();
+			this.possibleMoves = new ArrayList<int[]>();
 			this.isLeaf = false;
 			this.setEvaluationType("NotEvaluated");
 		}
 		
 		/**
-		 *  Creates a new 2D board of bytes filled with all 0s
+		 *  Creates a new 2D board of ints filled with all 0s
 		 * @return the newly generated board;
 		 */
-		private byte[][] generateNewBoard() 
+		private int[][] generateNewBoard() 
 		{
-			byte[][] board = new byte[this.boardSize1][this.boardSize2];
-			for(byte i = 0; i < this.boardSize1; i++)
+			int[][] board = new int[this.boardSize1][this.boardSize2];
+			for(int i = 0; i < this.boardSize1; i++)
 			{
-				for(byte j = 0; j < this.boardSize2; j++)
+				for(int j = 0; j < this.boardSize2; j++)
 				{
 					board[i][j] = 0;
 				}
@@ -82,7 +87,8 @@ public class BoardInterface
 			this.whoGoesFirst = boardInterfaceToBeCoppied.getWhoGoesFirst();
 			
 			// Consequential fields
-			this.board = copyBoard(boardInterfaceToBeCoppied.getBoard());
+			//this.board = copyBoard(boardInterfaceToBeCoppied.getBoard());
+			this.board = Arrays.stream(boardInterfaceToBeCoppied.getBoard()).map(int[]::clone).toArray(int[][]::new);
 			this.turn = boardInterfaceToBeCoppied.getTurn();
 			
 			
@@ -90,21 +96,26 @@ public class BoardInterface
 			this.value = boardInterfaceToBeCoppied.getValue();
 			this.children = new ArrayList<BoardInterface>(); // Do not want to copy this value, since each new board interface will have its own unique children
 			this.winner = boardInterfaceToBeCoppied.getWinner();
-			this.possibleMoves = new ArrayList<byte[]>();
+			this.possibleMoves = new ArrayList<int[]>();
 			this.isLeaf = boardInterfaceToBeCoppied.isLeaf();
 			
 		}
 		/**
 		 * Creates a copy of the 2D array of bites that is the board
 		 * @param board2 2D array of bites
-		 * @return the copy of the 2D array of bytes
+		 * @return the copy of the 2D array of ints
 		 */
-		private byte[][] copyBoard(byte[][] board2) 
+		private int[][] copyBoard(int[][] board2) 
 		{
-			byte[][] boardCopy = new byte[this.boardSize1][this.boardSize2];
-			for(byte i = 0; i < this.boardSize1; i++)
+			//return Arrays.copyOf(board2, board2.length);
+			
+			//return Arrays.stream(board2).map(int[]::clone).toArray(int[][]::new);
+			
+			
+			int[][] boardCopy = new int[this.boardSize1][this.boardSize2];
+			for(int i = 0; i < this.boardSize1; i++)
 			{
-				for(byte j = 0; j < this.boardSize2; j++)
+				for(int j = 0; j < this.boardSize2; j++)
 				{
 					boardCopy[i][j] = board2[i][j];
 				}
@@ -118,13 +129,13 @@ public class BoardInterface
 		 * @param y y coordinate of the proposed move
 		 * @return true if move is valid, false otherwise
 		 */
-		public boolean makeMove(byte x, byte y) 
+		public boolean makeMove(int x, int y) 
 		{
 			if(this.board[x][y] != 0)
 			{
 				return false;
 			}
-			this.board[x][y] = (byte) ((this.turn % 2) + 1);
+			this.board[x][y] =  ((this.turn % 2) + 1);
 			this.turn++;
 			return true;
 		}
@@ -142,7 +153,7 @@ public class BoardInterface
 		public boolean isPlayable()
 		{
 			// Determines if the game if still in a playable state
-			this.possibleMoves = new ArrayList<byte[]>();
+			this.possibleMoves = new ArrayList<int[]>();
 			if((this.boardSize1 * this.boardSize2 - this.turn) == 0)
 			{
 				this.isLeaf = true;
@@ -153,17 +164,25 @@ public class BoardInterface
 				return false;
 			}
 			
-			// Generates a list of possible moves based on empty board spaces
-			for(byte i = 0; i < this.boardSize1; i++)
+			if(this.turn == 0)
 			{
-				for(byte j = 0; j < this.boardSize2; j++)
+				int[] newMove = { (this.boardSize1/2),  (this.boardSize2/2)}; 
+				this.possibleMoves.add(newMove);
+				return true;
+			}
+			
+			
+			// Generates a list of possible moves based on empty board spaces
+			for(int i = 0; i < this.boardSize1; i++)
+			{
+				for(int j = 0; j < this.boardSize2; j++)
 				{
 					if(this.board[i][j] == 0)
 					{
 						// Only care about adjacent squares to places already moved
-						if(this.isAdjacentSquare(i, j) || this.turn == 0)
+						if(this.isAdjacentSquare(i, j))
 						{
-							byte[] newMove = {i, j};
+							int[] newMove = {i, j};
 							this.possibleMoves.add(newMove);
 						}
 					}
@@ -178,7 +197,7 @@ public class BoardInterface
 		 * @param j
 		 * @return true if it is adjacent, false otherwise
 		 */
-		private boolean isAdjacentSquare(byte i, byte j) 
+		private boolean isAdjacentSquare(int i, int j) 
 		{
 			if(i + 1 < this.boardSize1)
 			{
@@ -249,17 +268,18 @@ public class BoardInterface
 		 * 	If so, gives a static evaluation, else does nothing.
 		 * @return 
 		 */
-		public byte evaluateBoard(int currentDepth, int maxDepth) 
+		public int evaluateBoard(int currentDepth, int maxDepth) 
 		{
 			if(this.hasWon())
 			{
-				if(this.winner == (byte)((this.whoGoesFirst % 2 ) + 1))
+				//this.value = heuristicEvaluation(currentDepth, maxDepth);
+				if(this.winner == ((this.whoGoesFirst % 2 ) + 1))
 				{
-					this.value = (byte)(-110 + currentDepth);
+					this.value = (-10000 + currentDepth);
 				}
-				else if(this.winner == (byte)((this.whoGoesFirst + 1) % 2) + 1)
+				else if(this.winner == ((this.whoGoesFirst + 1) % 2) + 1)
 				{
-					this.value = (byte)(110 - currentDepth);
+					this.value = (10000 - currentDepth);
 				}
 				else if(this.turn == this.boardSize1 * this.boardSize2)
 				{
@@ -284,143 +304,184 @@ public class BoardInterface
 		 * Need a way to evaluate boards that are not yet won or lost when we reach max depth
 		 * @return a heuristic evaluation of the given leaf board
 		 */
-		public byte heuristicEvaluation(int currentDepth, int maxDepth)
+		public int heuristicEvaluation(int currentDepth, int maxDepth)
 		{
-			byte value = 0;
-
-			if(currentDepth <= maxDepth)
+			// Threat types
+			final int T0 = 100;
+			final int T1 = 50;
+			final int T2 = 33;
+			
+			// Threat evaluation
+			
+			
+			//// ADD CHECK FOR BOTH PLAYERS THREATS/////////
+			int value = 0;
+			int player1 = (((this.turn + 1) % 2) + 1);
+			int player2 = ((this.turn % 2) + 1);
+			
+			
+			
+			// Diamond structure
+			for(int i = 0; i < this.boardSize1; i++)
 			{
-				byte playerCharacter = (byte) (((this.turn + 1) % 2) + 1);
-				for(byte i = 0; i < this.boardSize1; i++)
+				for(int j = 0; j < this.boardSize2; j++)
 				{
-					for(byte j = 0; j < this.boardSize2; j++)
+					int counterY = 0;
+					int counterX = 0;
+					int counterXeqY = 0;
+					int counterXeqNegY = 0;
+					if(this.board[i][j] == 0)
 					{
-						// Checks for closeness to a win
-						if(this.board[i][j] == playerCharacter)
-						{
-							// Check for closeness to winning in rows
-							byte k = 1;
-							for(k = 1; k <= this.inARowToWin; k++)
-							{
-								if(i + k >= this.boardSize1 || this.board[i + k][j] == ((this.turn) % 2) + 1)
-								{
-									break;
-								}
-							}
-							if(k == this.inARowToWin - 1)
-							{
-								value++;
-							}
-							
-							// Reset k check for closeness to wining in columns
-							k = 1;
-							for(k = 1; k <= this.inARowToWin; k++)
-							{
-								if(j + k >= this.boardSize2 || this.board[i][j + k] == ((this.turn) % 2) + 1)
-								{
-									break;
-								}
-							}
-							if(k == this.inARowToWin - 1)
-							{
-								value++;
-							}
-							
-							// Reset k check for closeness to wining in columns
-							k = 1;
-							for(k = 1; k <= this.inARowToWin; k++)
-							{
-								if(i + k >= this.boardSize1 || j + k >= this.boardSize2 || this.board[i + k][j + k] == ((this.turn) % 2) + 1)
-								{
-									break;
-								}
-							}
-							if(k == this.inARowToWin - 1)
-							{
-								value++;
-							}
-							
-							// Reset k check for closeness to wining in columns
-							k = 1;
-							for(k = 1; k <= this.inARowToWin; k++)
-							{
-								if(i + k >= this.boardSize1|| j - k < 0 || this.board[i + k][j - k] == ((this.turn) % 2) + 1)
-								{
-									break;
-								}
-							}
-							if(k == this.inARowToWin - 1)
-							{
-								value++;
-							}
-						}
+						counterY = this.YinARow(i, j);
+						counterX = this.XinARow(i, j);
+						counterXeqY = this.XeqYinARow(i, j);
+						counterXeqNegY = this.XeqNegYinARow(i, j);
 						
-						// Checks for diamond structure
-						else if(board[i][j] == 0)
-						{
-							byte counter = 0;
-							if(i + 1 < this.boardSize1 && this.board[i + 1][j] == playerCharacter)
-							{
-								for(byte k = -1; k < 2; k++)
-								{
-									if(j + k < this.boardSize2 && j + k >= 0)
-									{
-										if(this.board[i + 1][j + k] == 0)
-										{
-											counter++;
-										}
-									}
-								}
-							}
-							if(i - 1 >=0 && this.board[i - 1][j] == playerCharacter)
-							{
-								for(byte k = -1; k < 2; k++)
-								{
-									if(j + k < this.boardSize2 && j + k >= 0)
-									{
-										if(this.board[i - 1][j + k] == 0)
-										{
-											counter++;
-										}
-									}
-								}
-							}
-							if(j + 1 < this.boardSize2 && this.board[i][j + 1] == playerCharacter)
-							{
-								for(byte k = -1; k < 2; k++)
-								{
-									if(i + k < this.boardSize1 && i + k >= 0)
-									{
-										if(this.board[i + k][j + 1] == 0)
-										{
-											counter++;
-										}
-									}
-								}
-							}
-							if(j - 1 >= 0 && this.board[i][j - 1] == playerCharacter)
-							{
-								for(byte k = -1; k < 2; k++)
-								{
-									if(i + k < this.boardSize1 && i + k >= 0)
-									{
-										if(this.board[i + k][j - 1] == 0)
-										{
-											counter++;
-										}
-									}
-								}
-							}
-							
-						value += counter;
-						}
+						value += counterY + counterX + counterXeqY + counterXeqNegY;
+						
+						
+						
 					}
 				}
 			}
-			
-			
-			return  (byte) (3 * value);
+			if(((this.whoGoesFirst) % 2) == (this.turn) % 2)
+			{
+				value = value * (-1);
+			}
+			this.displayBoard();
+			System.out.println("H value:^^ " + value);
+			return value;
 		}
+		
+		private int YinARow(int i, int j)
+		{
+			int player1 = (((this.turn + 1) % 2) + 1);
+			int player2 = (((this.turn + 1) % 2) + 1);
+			
+			int counterY = 0;
+			
+			for(int k = 1; k < this.inARowToWin; k++)
+			{
+				if(i + k < this.boardSize1)
+				{
+					if(this.board[i + k][j] == player1)
+					{
+						counterY++;
+					}
+					else if(this.board[i + k][j] == 0)
+					{
+						counterY++;
+						break;
+					}
+					else
+					{
+						break;
+					}
+				}
+				else
+				{
+					break;
+				}
+			}
+			return counterY;
+		}
+		private int XinARow(int i, int j)
+		{
+			int player1 = (((this.turn + 1) % 2) + 1);
+			int player2 = (((this.turn + 1) % 2) + 1);
+			
+			int counterY = 0;
+			
+			for(int k = 1; k < this.inARowToWin; k++)
+			{
+				if(j + k < this.boardSize2)
+				{
+					if(this.board[i][j + k] == player1)
+					{
+						counterY++;
+					}
+					else if(this.board[i][j + k] == 0)
+					{
+						counterY++;
+						break;
+					}
+					else
+					{
+						break;
+					}
+				}
+				else
+				{
+					break;
+				}
+			}
+			
+			return counterY;
+		}
+		private int XeqYinARow(int i, int j)
+		{	
+			int player1 = (((this.turn + 1) % 2) + 1);
+			int player2 = (((this.turn + 1) % 2) + 1);
+		
+			int counterXeqY = 0;
+			for(int k = 1; k < this.inARowToWin; k++)
+			{
+				if(i + k < this.boardSize2 && j - k > -1)
+				{
+					if(this.board[i + k][j - k] == player1)
+					{
+						counterXeqY++;
+					}
+					else if(this.board[i + k][j - k] == 0)
+					{
+						counterXeqY++;
+						break;
+					}
+					else
+					{
+						break;
+					}
+				}
+				else
+				{
+					break;
+				}
+			}
+			return counterXeqY;
+		}
+		private int XeqNegYinARow(int i, int j)
+		{
+			int player1 = (((this.turn) % 2) + 1);
+			int player2 = (((this.turn + 1)% 2) + 1);
+			
+			int counterXeqNegY = 0;
+			for(int k = 1; k < this.inARowToWin; k++)
+			{
+				if(i + k < this.boardSize1 && j + k < this.boardSize2)
+				{
+					if(this.board[i + k][j + k] == player1)
+					{
+						counterXeqNegY ++;
+					}
+					else if(this.board[i + k][j + k] == 0)
+					{
+						counterXeqNegY++;
+						break;
+					}
+					else
+					{
+						break;
+					}
+				}
+				else
+				{
+					break;
+				}
+			}
+			
+			return counterXeqNegY;
+		}
+		
 		
 		/**
 		 * 	checks for three in a row, four different ways,  starting at board[0][0] 
@@ -430,14 +491,14 @@ public class BoardInterface
 		public boolean hasWon()
 		{
 
-			byte playersCharacter = (byte) (((this.turn + 1) % 2) + 1);
-			for(byte i = 0; i < this.boardSize1; i++)
+			int playersCharacter =  (((this.turn + 1) % 2) + 1);
+			for(int i = 0; i < this.boardSize1; i++)
 			{
-				for(byte j = 0; j < this.boardSize2; j++)
+				for(int j = 0; j < this.boardSize2; j++)
 				{
 					if(this.board[i][j] == playersCharacter)
 					{
-						byte k = 1;
+						int k = 1;
 						while(i + k < this.boardSize1 && this.board[i + k][j] == playersCharacter)
 						{
 							if(k == this.inARowToWin - 1)
@@ -492,9 +553,9 @@ public class BoardInterface
 		 */
 		public void displayBoard()
 		{
-			for(byte i = 0; i < this.boardSize1; i++)
+			for(int i = 0; i < this.boardSize1; i++)
 			{
-				for(byte j = 0; j < this.boardSize2; j++)
+				for(int j = 0; j < this.boardSize2; j++)
 				{
 					System.out.print("|" + (char)(-(7*this.board[i][j]) + 95));
 				}
@@ -511,10 +572,10 @@ public class BoardInterface
 		 */
 		private boolean isEquale(BoardInterface otherBoardInterface)
 		{
-			byte[][] otherBoard = otherBoardInterface.getBoard();
-			for(byte i = 0; i < this.boardSize1; i++)
+			int[][] otherBoard = otherBoardInterface.getBoard();
+			for(int i = 0; i < this.boardSize1; i++)
 			{
-				for(byte j = 0; j< this.boardSize2; j++)
+				for(int j = 0; j< this.boardSize2; j++)
 				{
 					if(this.board[i][j] != otherBoard[i][j])
 					{
@@ -533,7 +594,7 @@ public class BoardInterface
 		public boolean isEqualUpToSymmetry(BoardInterface otherBoardInterface)
 		{
 		
-			byte[][] otherBoard = otherBoardInterface.getBoard();
+			int[][] otherBoard = otherBoardInterface.getBoard();
 			if(this.isEquale(otherBoardInterface))
 			{
 				return true;
@@ -554,9 +615,9 @@ public class BoardInterface
 			if(this.boardSize1 == this.boardSize2)
 			{
 				
-				for(byte i = 0; i < this.boardSize1; i++)
+				for(int i = 0; i < this.boardSize1; i++)
 				{
-					for(byte j = 0; j < this.boardSize2; j++)
+					for(int j = 0; j < this.boardSize2; j++)
 					{
 						if(this.board[i][j] != otherBoard[this.boardSize1 - 1 - j][i])
 						{
@@ -595,9 +656,9 @@ public class BoardInterface
 			}
 			else
 			{
-				for(byte i = 0; i < this.boardSize1; i++)
+				for(int i = 0; i < this.boardSize1; i++)
 				{
-					for(byte j = 0; j < this.boardSize2; j++)
+					for(int j = 0; j < this.boardSize2; j++)
 					{
 						if(this.board[i][j] != otherBoard[this.boardSize1 - 1 - i][this.boardSize2 - 1 - j])
 						{
@@ -631,17 +692,17 @@ public class BoardInterface
 		
 		
 		
-		public byte getBoardSize2() {return boardSize2;}
-		public void setBoardSize2(byte boardSize2) {this.boardSize2 = boardSize2;}
+		public int getBoardSize2() {return boardSize2;}
+		public void setBoardSize2(int boardSize2) {this.boardSize2 = boardSize2;}
 		
-		public byte getBoardSize1() {return boardSize1;}
-		public void setBoardSize1(byte boardSize1) {this.boardSize1 = boardSize1;}
+		public int getBoardSize1() {return boardSize1;}
+		public void setBoardSize1(int boardSize1) {this.boardSize1 = boardSize1;}
 		
-		public byte[][] getBoard() {return board;}
-		public void setBoard(byte[][] board) {this.board = board;}
+		public int[][] getBoard() {return board;}
+		public void setBoard(int[][] board) {this.board = board;}
 		
-		public byte getWinner() {return this.winner;}
-		public void setWinner(byte winner) {this.winner = winner;}
+		public int getWinner() {return this.winner;}
+		public void setWinner(int winner) {this.winner = winner;}
 
 		public int getTurn() {return this.turn;}
 		public void setTurn(int turn) {this.turn = turn;}
@@ -649,20 +710,20 @@ public class BoardInterface
 		public ArrayList<BoardInterface> getChildren() {return this.children;}
 		public void setChildren(ArrayList<BoardInterface> children) {this.children = children;}
 		
-		public void setPossibleMoves(ArrayList<byte[]> possibleMoves) {this.possibleMoves = possibleMoves;}
-		public ArrayList<byte[]> getPossibleMoves() { return this.possibleMoves;}
+		public void setPossibleMoves(ArrayList<int[]> possibleMoves) {this.possibleMoves = possibleMoves;}
+		public ArrayList<int[]> getPossibleMoves() { return this.possibleMoves;}
 		
-		public byte getInARowToWin() {return this.inARowToWin;}
-		public void setInARowToWin(byte inARowToWin) {this.inARowToWin = inARowToWin;}
+		public int getInARowToWin() {return this.inARowToWin;}
+		public void setInARowToWin(int inARowToWin) {this.inARowToWin = inARowToWin;}
 				
-		public byte getValue() {return this.value;}
-		public void setValue(byte value) {this.value = value;}
+		public int getValue() {return this.value;}
+		public void setValue(int value) {this.value = value;}
 
 		public boolean isLeaf() {return this.isLeaf;}
 		public void setIsLeaf(boolean isLeaf) {this.isLeaf = isLeaf;}
 
-		public byte getWhoGoesFirst() {return whoGoesFirst;}
-		public void setWhoGoesFirst(byte whoGoesFirst) {this.whoGoesFirst = whoGoesFirst;}
+		public int getWhoGoesFirst() {return whoGoesFirst;}
+		public void setWhoGoesFirst(int whoGoesFirst) {this.whoGoesFirst = whoGoesFirst;}
 
 		public String getEvaluationType() {
 			return evaluationType;
